--- a/project2/cart/templates/cart_detail.html
+++ b/project2/cart/templates/cart_detail.html
@@ -14,14 +14,14 @@
                     <th>Số lượng</th>
                     <th>Giá</th>
                     <th>Tổng cộng</th>
-                    {% comment %} <th>Xóa</th> {% endcomment %}
+                    <th>Xóa</th>
                 </tr>
             </thead>
             <tbody>
                 {% for item in cart_items %}
                     <tr>
                         <td>{{ item.book.name }}</td>
-                         <td>
+                        <td>
                             <form method="post" action="{% url 'cart:update_quantity' item.pk %}">
                                 {% csrf_token %}
                                 <input type="number" name="quantity" value="{{ item.quantity }}" min="1" max="10">
@@ -29,8 +29,7 @@
                             </form>
                         </td> 
                         <td>{{ item.book.price }}</td>
-                        <td>{{item.quantity }}</td> 
-                        {% comment %} item.book.price *  {% endcomment %}
+                        <td>{{ item.get_item_price }}</td> 
                         <td> 
                             <form method="post" action="{% url 'cart:remove_from_cart' item.pk %}">
                                 {% csrf_token %}
@@ -44,10 +43,10 @@
                 <tr>
                     <td colspan="3">Tổng cộng:</td>
                     <td>{{ total_price }}</td>
+                    <td></td>
                 </tr>
             </tfoot>
         </table>
-        
     {% else %}
         <p>Giỏ hàng của bạn đang trống.</p>
     {% endif %}
