--- a/project2/cart/templates/cart_detail.html
+++ b/project2/cart/templates/cart_detail.html
@@ -47,6 +47,7 @@
                 </tr>
             </tfoot>
         </table>
+        <a href="{% url 'orders:create_order' %}" > đặt hàng </a>
     {% else %}
         <p>Giỏ hàng của bạn đang trống.</p>
     {% endif %}
