--- a/project2/book/templates/book_list.html
+++ b/project2/book/templates/book_list.html
@@ -23,13 +23,18 @@
           <td><img src="{{ book.image.url }}" alt="{{ book.name }}"></td>
            <td>
             <a href="{% url 'book:book_detail' book.book_id %}">Detail</a> | 
-            <a href="{% url 'book:book_edit' book.pk %}">Edit</a> | 
-            <a href="{% url 'book:book_delete' book.pk %}">Delete</a> 
+            {% if request.user.is_superuser %}
+              <a href="{% url 'book:book_edit' book.pk %}">Edit</a> | 
+              <a href="{% url 'book:book_delete' book.pk %}">Delete</a> 
+             
+            {% endif %}
             <a href="{% url 'cart:add_to_cart' book.pk %}">Add to cart</a>
           </td> 
         </tr>
       {% endfor %}
     </tbody>
   </table>
-  <a href="{% url 'book:book_create' %}">Create New Book</a>
+  {% if request.user.is_superuser %}
+    <a href="{% url 'book:book_create' %}">Create New Book</a>
+  {% endif %}
 {% endblock %}
