--- a/project2/book/templates/category_list.html
+++ b/project2/book/templates/category_list.html
@@ -17,14 +17,17 @@
            <td>
             <a href="{% url 'book:bookOfCategory' category.category_id %}">Detail</a>
           </td> 
+          {% if request.user.is_superuser %}
              <td>
               <a href="{% url 'book:category_delete' category.category_id  %}">delete</a> | 
             </td> 
-          
+            {% endif %}
         </tr>
       {% endfor %}
     </tbody>
-    <p><a href="{% url 'book:category_create' %}">create</a> | </p>
+    {% if request.user.is_superuser %}
+      <p><a href="{% url 'book:category_create' %}">create</a> | </p>
+    {% endif %}
   </table>
   {% comment %} <a href="{% url 'book:book_create' %}">Create New Book</a> {% endcomment %}
 {% endblock %}
